reworked animation and added earth image asset

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,8 @@
     <string name="tools">Tools</string>
     <string name="share">Share</string>
     <string name="send">Send</string>
+    <string name="good_mood">Good Mood</string>
+    <string name="neutral_mood">Neutral Mood</string>
+    <string name="bad_mood">Bad Mood</string>
 
 </resources>
