--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="load_service_activity">Load Service Activity</string>
     <string name="load_notification_activity">Load Notification Activity</string>
     <string name="load_navigation_drawer_activity">Load Navigation Drawer Activity</string>
+    <string name="load_custom_navigation_drawer_activity">Load Custom Navigation Drawer Activity</string>
 
     <!--Service-->
     <string name="start_service">Start Service</string>
@@ -87,8 +88,5 @@
     <string name="good_mood">Good Mood</string>
     <string name="neutral_mood">Neutral Mood</string>
     <string name="bad_mood">Bad Mood</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
