added pip mode for main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
 
     <!--Main-->
     <string name="activity_main_title">Main</string>
+    <string name="is_in_pip_mode">Is in PIP Mode</string>
 
     <!--Listviews-->
     <string name="mercury">Mercury</string>
@@ -57,6 +58,7 @@
     <string name="load_notification_activity">Load Notification Activity</string>
     <string name="load_navigation_drawer_activity">Load Navigation Drawer Activity</string>
     <string name="load_custom_navigation_drawer_activity">Load Custom Navigation Drawer Activity</string>
+    <string name="enter_pip_mode">Enter PIP Mode</string>
 
     <!--Service-->
     <string name="start_service">Start Service</string>
