--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <!--AppWidget-->
     <string name="test_button">Test Button</string>
 
+    <!--AppWidgetConfigure-->
+    <string name="create_widget">Create Widget</string>
+
     <!--Toolbar-->
     <string name="mika">Mika</string>
     <string name="toolbar_title">Toolbar Title</string>
@@ -94,6 +97,5 @@
     <string name="good_mood">Good Mood</string>
     <string name="neutral_mood">Neutral Mood</string>
     <string name="bad_mood">Bad Mood</string>
-    <string name="title_activity_my_app_widget_configure">MyAppWidgetConfigure</string>
 
 </resources>
