--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,20 @@
     <string name="mika">Mika</string>
     <string name="toolbar_title">Toolbar Title</string>
 
+    <!--Settings-->
+    <string name="settings">Settings</string>
+    <string name="first_preference_category">First Preference Category</string>
+    <string name="second_preference_category">Second Preference Category</string>
+    <string name="check_box_preference">CheckBox Preference</string>
+    <string name="list_preference">List Preference</string>
+    <string name="list_preference_dialog_title">List Preference Dialog Title</string>
+    <string name="list_default_value">Default value</string>
+    <string name="custom_summary">Custom Summary</string>
+    <string name="preference">Preference</string>
+    <string name="preference_screen">Preference Screen</string>
+    <string name="ringtone_preference">Ringtone Preference</string>
+    <string name="preference_intent">Preference Intent</string>
+
     <!--Menu-->
     <string name="logout">Logout</string>
 
@@ -97,5 +111,9 @@
     <string name="good_mood">Good Mood</string>
     <string name="neutral_mood">Neutral Mood</string>
     <string name="bad_mood">Bad Mood</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
