--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,7 +91,8 @@
     <string name="create_expanded_notification">Create expanded notification</string>
     <string name="create_custom_notification">Create Custom Notification</string>
     <string name="create_group_notification">Create Group Notification</string>
-
+    <string name="notification_channel_name">Channel Name</string>
+    <string name="notification_channel_description">Channel Description</string>
 
     <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
 
